--- a/templates/js_timeline_chart.html
+++ b/templates/js_timeline_chart.html
@@ -4,7 +4,7 @@ function drawChart() {
     var data = new google.visualization.DataTable();
     data.addColumn('date', 'Date');
     {% for i in range(chart["datalen"]) -%}
-    data.addColumn('number', '{{chart["y_label"]}}');
+    data.addColumn('number', '{{chart["y_label"][i]}}');
     {% endfor -%}
     {% for point in dataset -%}
     data.addRow([new Date({{point[0].year}}, {{point[0].month - 1}}, {{point[0].day}}), 
@@ -13,7 +13,7 @@ function drawChart() {
     {%- endfor -%}
     ]);
     {%- endfor -%}
-    var options = {'height': 300, 'width': 600, 'lineWidth': 1, 'pointSize': 5, vAxis: {format: '##', title: '{{chart["y_label"]}}'}, 'title': '{{chart["title"]}}'};
+    var options = {'height': 300, 'width': 600, 'lineWidth': 1, 'pointSize': 5, vAxis: {format: '##', title: '{{chart["v_label"]}}'}, 'title': '{{chart["title"]}}'};
     var chart = new google.visualization.LineChart(document.getElementById('{{chart["div_name"]}}'));
     chart.draw(data, options);
     }
