--- a/stylesheets/blog.css
+++ b/stylesheets/blog.css
@@ -45,4 +45,24 @@ textarea {
     margin-left: auto;
     margin-right: auto;
 }
+
+div.CategoryListing {
+    width: 100%;
+    margin-top: 1px;
+    margin-bottom: 1px;
+    //border: 1px solid black;
+}
+
+div.CategoryListing ul {
+    text-decoration: none;
+    display: inline;
+}
+
+div.CategoryListing li {
+    display: inline;
+    margin: 5px;
+    padding: 5px;
+    background-color: #dddddd;
+    float: left;
+}
     
