--- a/templates/panelpage.html
+++ b/templates/panelpage.html
@@ -65,6 +65,14 @@
         <h2 class="PanelCategory">General Activity</h2>
         <form action="/postactivity" method="post">
             Name <input type="text" name="activity_name"><br>
+            {% if activity_categories -%}
+            <p>Recorded activity names:</p>
+            <div class="CategoryListing"><ul>
+                {% for activity in activity_categories -%}
+                <li>{{activity}}
+                {% endfor -%}
+            </ul></div>
+            {% endif -%}
             Day <input maxlength="10" class="Date" type="text" name="activity_day" value="{{(datetime.datetime.utcnow() + datetime.timedelta(hours = user.timezone)).strftime('%d/%m/%Y')}}"><br>
             Time <input class="Time" type="text" name="activity_time" value="{{(datetime.datetime.utcnow() + datetime.timedelta(hours = user.timezone)).strftime('%H:%M')}}"><br>
             <input type="submit">
@@ -77,6 +85,14 @@
             <h2 class="PanelCategory">General Timed Activity</h2>
             <form action="/posttimedactivity" method="post">
                 Name <input type="text" name="act_name"><br>
+                {% if timed_activity_categories -%}
+                <p>Recorded timed activity names:</p>
+                <div class="CategoryListing"><ul>
+                    {% for activity in timed_activity_categories -%}
+                    <li>{{activity}}
+                    {% endfor -%}
+                </ul></div>
+                {% endif -%}
                 Start time <input class="Date" type="text" name="act_start_day" value="{{(datetime.datetime.utcnow() + datetime.timedelta(hours = user.timezone)).strftime('%d/%m/%Y')}}">
                 <input class="Time" type="text" name="act_start_time"><br>
                 End time <input class="Date" type="text" name="act_end_day" value="{{(datetime.datetime.utcnow() + datetime.timedelta(hours = user.timezone)).strftime('%d/%m/%Y')}}">
@@ -151,19 +167,27 @@
             <input class="Currency" type="text" name="exp_currency" value="{{user.currency}}"><br>
             file under <input type="text" name="exp_category">
             <input class="Date" type="text" name="exp_when" value="{{(datetime.datetime.utcnow() + datetime.timedelta(hours = user.timezone)).strftime('%d/%m/%Y')}}"><br>
+            {% if expense_categories -%}
+            <p>Recorded expense categories:</p>
+            <div class="CategoryListing"><ul>
+                {% for category in expense_categories -%}
+                <li>{{category}}
+                {% endfor -%}
+            </ul></div>
+            {% endif -%}
             <input type="submit">
         </form>
     </div>
     
     <div class="Block" id="ExpenseCategories">
         <form action="/categorizeexpense" method="post">
-            Recorded expense categories
-            <ul>
+            Recorded expense categories<br>
+            <div class="CategoryListing"><ul>
             {% for category in expense_categories -%}
                 <li><input type="checkbox" name="public_category" value="{{category}}" {{checked}}>{{category}}
             {% endfor -%}
-            </ul>
-            <input type="submit">
+            </ul></div>
+            <input type="submit" value="make public">
         </form>
     </div>
 
