--- a/templates/blog_newpostpage.html
+++ b/templates/blog_newpostpage.html
@@ -8,11 +8,25 @@
 <div id="BlogNewpostOverWrapper" class="FullWrapper">
     <h2>{{user.salutation}} {{user.realname}}</h2>
     <form method="post">
-        Title<input type="text" name="title"><br>
-        Text<br>
-        <textarea name="content"></textarea><br>
-        Privacy<input type="text" name="privacy" value="3"><br>
-        Category<input type="text" name="category"><br>
+        {% set params = {'title': '', 'content': '', 'privacy': 3, 'category': ''} -%}
+        {% if post -%}
+            {% set params = {'title': post.title, 'content': post.content, 'privacy': post.privacy, 'category': post.category} -%}
+        {% endif -%}
+        Title <input type="text" name="title" value="{{params['title']}}"><br>
+        Text <br>
+        <textarea name="content">{{params['content']}}</textarea><br>
+        Privacy <input type="text" name="privacy" value="{{params['privacy']}}"><br>
+        <p>Who can see this post, according to privacy:</p>
+        <ol start="0">
+            <li>Author only
+            <li>Author-defined list of users
+            <li>Any logged in user
+            <li>Anyone
+        </ol>
+        Category <input type="text" name="category" value="{{params['category']}}"><br>
+        {% if post -%}
+            <input type="hidden" name="postid" value="{{post.key().id()}}">
+        {% endif -%}
         <div class="CategoryListing">
             <p>Previous categories:</p>
             <ul>
