--- a/templates/blog_panelpage.html
+++ b/templates/blog_panelpage.html
@@ -29,5 +29,12 @@
 {% else -%}
     <p>You have not posted anything yet</p>
 {% endif -%}
+<div class="Wrapper">
+    <h2>Blog-wide settings</h2>
+    <form method="post">
+        Headline <input type="text" name="blog_headline" value="{{userconf['blog_headline']}}">
+        <input type="submit">
+    </form>
+</div>
 </div>
 {% endblock -%}
