--- a/templates/blog_newpostpage.html
+++ b/templates/blog_newpostpage.html
@@ -35,6 +35,7 @@
                 {% endfor -%}
             </ul>
         </div>
+        <input type="submit" name="isdraft" value="save as draft">
         <input type="submit">
     </form>
 </div>
