--- a/templates/panelpage.html
+++ b/templates/panelpage.html
@@ -325,6 +325,7 @@
         {% else -%}
         <p>No registered song yet</p>
         {% endif -%}
+    </div>
 
     <div class="Block" id="BatchExpense">
         <h2 class="PanelCategory">Batch Expense</h2>
