added general activity analyses page

--- a/templates/userpage.html
+++ b/templates/userpage.html
@@ -31,6 +31,9 @@
 {% set dataset = coffee_stats['coffee_dayofweek_histogram'] -%}
 {% set chart = {'y_label': 'frequency', 'div_name': 'coffee_dayofweek_histogram', 'title':'Coffee day of week Histogram', 'xspace':'strcon'} -%}
 {% include 'js_histogram_chart.html' -%}
+{% set dataset = coffee_stats['coffee_dayofmonth_histogram'] -%}
+{% set chart = {'y_label': 'frequency', 'div_name': 'coffee_dayofmonth_histogram', 'title':'Coffee day of month Histogram', 'xspace':'dis'} -%}
+{% include 'js_histogram_chart.html' -%}
 {% endif %}
 
 {% if sleep_stats -%}
@@ -172,6 +175,7 @@
             <div id="coffee_histogram"></div>
             <div id="coffee_times_histogram"></div>
             <div id="coffee_dayofweek_histogram"></div>
+            <div id="coffee_dayofmonth_histogram"></div>
             </div>
             {% else -%}
             <p>{{user.salutation}} {{user.realname}} has not shared {{user.pos_determi}} habits yet. Could {{user.nom_pronoun}} be a milk drinker?</p>
