hack handler to add timezone to old data

--- a/templates/hackpage.html
+++ b/templates/hackpage.html
@@ -14,4 +14,11 @@
             <input type="submit" value="add a key">
         </form>
     </div>
+
+    <div class="Block" id="Add_Timezones">
+        <h2>Add Timezones</h2>
+        <form method="post" action="/addtimezones">
+            <input type="submit" value="add them timezones">
+        </form>
+    </div>
 {% endblock %}
